--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -62,23 +62,24 @@
         <div id="snb_left_box">
           <aside class="snb_left">
             <h1><a href="/">Sujin Lee</a></h1>
+            <div class="contact">
             <ul>
-              <ol>
-                EMAIL
-                <li>sujinlee.me@gmail.com</li>
-              </ol>
-              <ol>
-                Find Me On
-                <div class="ico_soical">
-                  <li ><a class="icon-social-github" href="http://www.github.com/sujinleeme"></a></li>
-                  <li ><a class="icon-social-linkedin" href="http://www.linkedin.com/in/leesujin"></a></li>
-                  <li ><a class="icon-social-facebook" href="http://www.facebook.com/sujinlee.me"></a></li>
-                  <li ><a class="icon-social-twitter" href="http://www.twitter.com/sujinleeme"></a></li>
-                  <li ><a class="icon-social-instagram" href="http://www.instagram.com/sujinlee.me/"></a></li>
-              </ol>
+              <li class="title">EMAIL</li>
+              <li>sujinlee.me@gmail.com</li>
             </ul>
+            <ul>
+                <li class="title">Find Me On</li>
+                <ul class="ico_soical">
+                  <li ><a class="icon-social-github" href="http://www.github.com/sujinleeme" target="_blank"></a></li>
+                  <li ><a class="icon-social-linkedin" href="http://www.linkedin.com/in/leesujin" target="_blank"></a></li>
+                  <li ><a class="icon-social-facebook" href="http://www.facebook.com/sujinlee.me" target="_blank"></a></li>
+                  <li ><a class="icon-social-twitter" href="http://www.twitter.com/sujinleeme" target="_blank"></a></li>
+                  <li ><a class="icon-social-instagram" href="http://www.instagram.com/sujinlee.me/" target="_blank"></a></li>
+                </ul>
+              </ul>
             </div>
           </aside>
+          </div>
           <main>
             <div id="main_box">
               {% block content %}{% endblock %}
