--- a/myblog/templates/blog/post_list.html
+++ b/myblog/templates/blog/post_list.html
@@ -17,7 +17,7 @@
 <header class="page_title">
   <h1>BLOG</h1>
 </header>
-<div>
+<div id="main_lst">
   {% if posts %}
   <ul id="lst_wrap_blog">
     {% for post in posts %}
