--- a/myblog/static/src/css/text.css
+++ b/myblog/static/src/css/text.css
@@ -1,6 +1,7 @@
 body, p, h1, h2, h3, h4, h5, h6, ul, ol, li, dl, dt, dd, table, th, td, form, fieldset, legend, input, textarea, button, select, menu {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-weight: 400; }
 
 button {
   background: none;
@@ -34,7 +35,8 @@ body {
   word-wrap: break-word;
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  font-weight: 400; }
 
 ::-moz-selection {
   background-color: #4B21FF; }
@@ -49,6 +51,9 @@ h1, h2 {
 
 h3 {
   font-weight: 500; }
+
+strong {
+  font-weight: 600; }
 
 .post_body {
   line-height: 2rem; }
@@ -97,7 +102,8 @@ h3 {
     padding-top: 3.5vh;
     font-size: 1.2rem; }
   .post_body h4 {
-    font-size: 16px; }
+    font-size: 16px;
+    font-weight: 500; }
   .post_body h5 {
     font-size: 14px; }
   .post_body h6 {
