--- a/myblog/templates/blog/post_edit.html
+++ b/myblog/templates/blog/post_edit.html
@@ -4,7 +4,7 @@
 {% block title %}
 
 
-<title>{{ post.title }}</title>
+<title>{{ post.title }} - Sujin Lee</title>
 {% endblock %}
 {% block ogtags %}
 <meta property="og:type" content="Sujin Lee:Post" />
