--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -101,8 +101,9 @@
 <div class="disqus" id="disqus_thread"></div>
 <button class="btn_expand material-icons">keyboard_arrow_left</button>
 <button class="btn_gototop material-icons">keyboard_arrow_up</button>
+{% endblock %}
+{% block facebookShare %}
 <script>
-  // facebook share
   function fbshare() {
     FB.ui({
         method: 'share_open_graph',
