--- a/myblog/templates/blog/post_edit.html
+++ b/myblog/templates/blog/post_edit.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block content %}
-<link rel="stylesheet" href="{% static 'src/css/form.css' %}">
+<link rel="stylesheet" href="{% static 'dist/css/form.css' %}">
 
 <header class="page_title">
   <a href="/blog"><button class="btn_blog material-icons">keyboard_backspace</button></a>
