--- a/myblog/static/src/scss/style.scss
+++ b/myblog/static/src/scss/style.scss
@@ -1,11 +1,12 @@
 @charset "utf-8";
+
 /*
 UPDATE : 2017.02.
 AUTHOR : SUJIN LEE (sujinlee.me@gmail.com)
 */
+
 /* === Common Style === */
 /* main color */
-
 $theme-col: #4B21FF;
 $accent-col: #E73E85;
 $bg-col: #fff;
@@ -14,16 +15,17 @@ $black-code: #282a36;
 $dark-gray: #656c7a;
 $light-gray: rgba(0,0,0,.05);
 $light-gray-hover: rgba(0,0,0,0.1);
-/* --- layout --- */
 
+/* --- layout --- */
 $page_margin_reset: 0%;
 $page_margin: 7vh;
+
 /* left navigation */
-
 $snb_left_width: 25vw;
-/* right section */
 
+/* right section */
 $main_width: 100vw - $snb_left_width;
+
 body {
     background: $bg-col;
     overflow: hidden;
@@ -45,37 +47,8 @@ main {
     height: 100vh;
     overflow-x: hidden;
     width: $main_width;
-    transition: padding 2s;
-
+    transition: all 2s;
 }
-
-
-
-
-
-// ::-webkit-scrollbar {
-//     width: 5px;
-//     transform:rotateX(-180deg);
-// }
-// ::-webkit-scrollbar-track {
-//     background-color: #eaeaea;
-//     border-left: 1px solid #ccc;
-// }
-// ::-webkit-scrollbar-thumb {
-//     background-color: #ccc;
-// }
-// ::-webkit-scrollbar-thumb:hover {
-//   background-color: #aaa;
-// }
-
-// #container{
-//     transition: transform 2s;
-// }
-
-// ._expand {
-//     transform: translateX(-25vw);
-// }
-
 
 #container {
     display: flex;
@@ -83,26 +56,11 @@ main {
     transition: transform 2s;
 }
 
-
-._expand-container {
-    transform: translateX(-25vw);
-}
-
-
-
 ._expand-main{
-    padding-left: 50vw;
+    padding-left: 25vw;
     padding-right: 25vw;
+    margin-right: 25vw;
 }
-
-
-// #container {
-//     display: flex;
-//     min-height: 100vh;
-//     transition-property: transform, margin-left;
-//     transition-duration: 2s 2s;
-//     transition-delay: 2s 2s;
-// }
 
 #snb_left_box {
     background: $theme-col;
@@ -115,6 +73,7 @@ main {
 }
 #main_box {
     padding: $page_margin;
+     transition: transform 2s; 
 }
 #main_content {
     padding: $page_margin;
@@ -130,8 +89,8 @@ article, .disqus {
     padding-right: $page_margin;
     margin: 0 2rem;
 }
-/* ==== STYLE ==== */
 
+/* ==== STYLE ==== */
 .snb_left {
     padding: $page_margin;
     background: $theme-col;
@@ -223,10 +182,7 @@ mark {
     color: $theme-col;
 }
 /* animation on external link */
-
-a,
-li,
-{
+a, li {
     transition: opacity 0.5s ease-in-out;
 }
 .shadow {
@@ -248,14 +204,13 @@ button, .btn_share li {
     opacity: 0.5;
     color: #fff;
 }
-/* image */
 
+/* image */
 img {
     image-rendering: pixelated;
     object-fit: cover;
 }
-/* common class */
-
+/* margin class */
 .u_centr_pg_v1 {
     text-align: center;
     position: absolute;
@@ -270,44 +225,106 @@ img {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+/* button */
 .ico_menu {
-    width: 2rem;
     position: fixed;
     cursor: pointer;
     z-index: 4;
     right: 7vh; //$page_margin
     top: 7vh;
+    width: 2rem;
+    height: 2rem;
+    display:  inline-block;
 }
-.line_1,
-.line_2,
-.line_3 {
-    width: 100%;
-    height: 4px;
-    background: $black;
-    margin-bottom: 0.4rem;
-    backface-visibility: hidden;
-    transition-duration: 0.1s;
-    padding: 0;
-}
-._active .line_1 {
-    background: #fff;
-    transform: rotate(45deg) translate(5px, 5px);
-}
-._active .line_2 {
-    opacity: 0;
+
+.ico_menu span {
+	margin: 0 auto;
+	position: relative;
+	top: 10px;
     transition-duration: 0s;
+    transition-delay: 0.2s;
+
 }
-._active .line_3 {
+.ico_menu span:before, .ico_menu span:after {
+	position: absolute;
+	content: '';
+}
+.ico_menu span, .ico_menu span:before, .ico_menu span:after {
+	width: 30px;
+	height: 4px;
+	background-color: $black;
+	display: block;
+}
+.ico_menu span:before {
+	margin-top: -10px;
+    @extend .animation_ico_menu;
+}
+.ico_menu span:after {
+	margin-top: 10px;
+    @extend .animation_ico_menu;
+}
+
+._active span {
+	background-color: rgba(0,0,0,0.0);
+	transition-delay: 0.2s;
+}
+
+._active span:before {
+	margin-top: 0;
+	transform: rotate(45deg);
+	transition-delay: 0s, 0.2s;
     background: #fff;
-    transform: rotate(-45deg) translate(9px, -9px);
+    opacity: 0.8;
 }
+.animation_ico_menu {
+	transition-property: margin, transform;
+	transition-duration: 0.2s;
+	// transition-delay: 0.2s, 0s;
+}
+._active span:after {
+	margin-top: 0;
+	transform: rotate(-45deg);
+	transition-delay: 0s, 0.2s;
+    background: #fff;
+    opacity: 0.8;
+}
+
+
+// .line_1,
+// .line_2,
+// .line_3 {
+//     width: 100%;
+//     height: 4px;
+//     background: $black;
+//     margin-bottom: 0.4rem;
+//     backface-visibility: hidden;
+//     transition-duration: 0.1s;
+//     padding: 0;
+// }
+// ._active .line_1 {
+//     background: #fff;
+//     transform: rotate(45deg) translate(5px, 5px);
+// }
+// ._active .line_2 {
+//     opacity: 0;
+//     transition-duration: 0s;
+// }
+// ._active .line_3 {
+//     background: #fff;
+//     transform: rotate(-45deg) translate(9px, -9px);
+// }
+
 .btn_back {
     margin-right: 1vh;
 }
 .btn_back, .btn_expand, .ico_menu, .btn_gototop {
-    height: 2rem;
     font-size: 3.2rem;
     line-height: 2rem;
+}
+
+.btn_blog {
+    font-size: 2.5rem;
 }
 
 .btn_expand, .btn_gototop {
@@ -327,10 +344,9 @@ img {
 .btn_gototop {
     bottom: $page_margin;
     transition: opacity 1s; 
-    opacity:0;
-        transform: translateX(63.5vw);
+    opacity: 0;
+    right: $page_margin;
     z-index: 1;
-
 }
 
 ._fadeIn{
@@ -376,13 +392,14 @@ img {
 
 
 /* disqus */
-
 .disqus {
     position: relative;
     a {
         color: $theme-col;
     }
 }
+
+/* share */
 .share_container,
 footer {
     ul, li {
@@ -457,8 +474,8 @@ span.show_unlike.icon-heart {
 .date {
     color: $dark-gray;
 }
-/* project */
 
+/* blog & project card list */
 .project_ele:hover,
 .blog_ele:hover {
     @extend .shadow;
@@ -535,8 +552,8 @@ span.show_unlike.icon-heart {
     bottom: 0;
     display: flex;
 }
-/* blog */
 
+/* blog */
 #lst_project_wrap {
     width: 100%;
     display: flex;
@@ -559,8 +576,6 @@ span.show_unlike.icon-heart {
     padding: $page_margin;
     display: flex;
     cursor: pointer;
-    a {}
-    // a {   display: block;}
 }
 .blog_ele header {
     width: 70%;
@@ -643,22 +658,3 @@ article {
     font-size: 0.9rem;
 }
 
-// form
-.form_wrap {
-    width: 100%;
-    display: flex;
-    form {
-        width: 50%;
-    }
-
-    button {
-        color: $theme-col;
-        font-size: 1.3rem;
-    }
-}
-
-
-.form_view {
-    width: 50%;
-    background: $black;
-}
