--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -18,10 +18,10 @@
     <meta property="og:title" content="Sujin Lee" />
     <meta property="og:author" content="https://www.facebook.com/sujinlee.me" />
     {% block ogtags %}
-    <meta property="og:type" content="website" />
-    <meta property="og:description" content="The connectivist" />
-    <meta property="og:image"content="https://www.sujinlee.me/static/image/background/profile-about.png" />
-    <meta property="og:url" content="https://www.sujinlee.me/" />
+      <meta property="og:type" content="website" />
+      <meta property="og:description" content="The connectivist" />
+      <meta property="og:image"content="https://www.sujinlee.me/static/image/background/profile-about.png" />
+      <meta property="og:url" content="https://www.sujinlee.me/" />
     {% endblock %}
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -32,22 +32,17 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700" rel="stylesheet">
     <!-- css -->
-    <link rel="stylesheet" href="{% static 'src/css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'src/css/text.css' %}">
-    <!-- javascript -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
+    <link rel="stylesheet" href="{% static 'dist/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'dist/css/text.css' %}">
+    {% block stylesheet %}
+    {% endblock %}
   </head>
   <!-- contents -->
   <body>
     <div id="wrap">
       <nav>
-        <menu class="ico_menu">
-          <ul>
-            <li class="line_1"></li>
-            <li class="line_2"></li>
-            <li class="line_3"></li>
-          </ul>
+        <menu class="menu ico_menu">
+          <span></span>
         </menu>
         <menuitem class="gnb">
           <ul>
@@ -88,22 +83,24 @@
         </div>
       </div>
     </div>
+
+    {% block facebookShare %}
+    {% endblock %}
+    
     {% block jsblock %}
+    <!-- javascript -->
+    <script src="{% static 'dist/js/script.min.js' %}"></script>
+    
     <!-- disqus -->
     <script scr="//sujinlee.disqus.com/embed.js"></script>
     <script src="//sujinlee.disqus.com/count.js" id="dsq-count-scr" async></script>
-    <!-- javascript -->
-    <script src="{% static 'src/js/script.js' %}"></script>
-    <script src="{% static 'src/js/prefixfree.min.js' %}"></script>
-    <script src="{% static 'src/js/highlight.pack.js' %}"></script>
-    <script src="{% static 'src/js/social.js' %}"></script>
+    
     <!-- build:js -->
-    <!--<script src="{% static 'dist/js/script.min.js' %}"></script>-->
-    <!--<script src="{% static 'src/js/prefixfree.min.js' %}"></script>
-      <script src="{% static 'src/js/script.js' %}"></script>
-      <script src="{% static 'src/js/highlight.pack.js' %}"></script>
-      <script src="{% static 'src/js/social.js' %}"></script>-->
+    <!--<script src="{% static 'src/js/script.js' %}"></script>
+    <script src="{% static 'src/js/highlight.pack.js' %}"></script>
+    <script src="{% static 'src/js/social.js' %}"></script>-->
     <!-- endbuild -->
+
     <!--Code Syntax -->
     <script>hljs.initHighlightingOnLoad();</script>
     <!--google-analytics-->
