--- a/myblog/templates/blog/index.html
+++ b/myblog/templates/blog/index.html
@@ -9,11 +9,13 @@
 <meta property="og:url" content="http://www.sujinlee.me/" />
 {% endblock %}
 
-{% block content %}
-<link rel="stylesheet" href="{% static 'src/css/index.css' %}">
+{% block stylesheet %}
+<link rel="stylesheet" href="{% static 'dist/css/index.css' %}">
+{% endblock %}
 
+{% block content %}
 <div class="home_img">
-<img src="{% static 'image/background/profile-about.png' %}" alt="profile" >
+  <img src="{% static 'image/background/profile-about.png' %}" alt="profile" >
 </div>
   <div class="home_title">
     <h1>Sujin <mark>Lee</mark></h1>
@@ -21,5 +23,5 @@
     <h3>Living in Seoul, Korea.</h3>
    <h3> Who loves Web and Music Collaboration.</h3>
   </div>
-  <div class="straight_line"></div>
+  <!--<div class="straight_line"></div>-->
 {% endblock %}
