--- a/myblog/static/src/scss/text.scss
+++ b/myblog/static/src/scss/text.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
-$theme-col: #4B21FF;
-$accent-col: #E73E85;
+$theme-col: #1f00ff;
+$accent-col: #ff00db;
 $bg-col: #fff;
 $black: #232528;
 $black-code: #282a36;
