--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -89,16 +89,16 @@
     
     {% block jsblock %}
     <!-- javascript -->
-    <script src="{% static 'dist/js/script.min.js' %}"></script>
+    <!--<script src="{% static 'dist/js/script.min.js' %}"></script>-->
     
     <!-- disqus -->
     <script scr="//sujinlee.disqus.com/embed.js"></script>
     <script src="//sujinlee.disqus.com/count.js" id="dsq-count-scr" async></script>
     
     <!-- build:js -->
-    <!--<script src="{% static 'src/js/script.js' %}"></script>
+    <script src="{% static 'src/js/script.js' %}"></script>
     <script src="{% static 'src/js/highlight.pack.js' %}"></script>
-    <script src="{% static 'src/js/social.js' %}"></script>-->
+    <script src="{% static 'src/js/social.js' %}"></script>
     <!-- endbuild -->
 
     <!--Code Syntax -->
