--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -102,6 +102,12 @@
 <button class="btn_expand material-icons">keyboard_arrow_left</button>
 <button class="btn_gototop material-icons">keyboard_arrow_up</button>
 {% endblock %}
+
+{% block jsblock %}
+<script src="{% static 'src/js/highlight.pack.js' %}"></script>
+<script src="{% static 'src/js/post_detail.js' %}"></script>
+{% endblock %}
+
 {% block facebookShare %}
 <script>
   function fbshare() {
