--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -100,6 +100,11 @@
 <button class="btn_gototop material-icons">keyboard_arrow_up</button>
 {% endblock %}
 
+{% block jsblock %}
+<script src="{% static 'src/js/highlight.pack.js' %}"></script>
+<script src="{% static 'src/js/post_detail.js' %}"></script>
+{% endblock %}
+
 {% block facebookShare %}
 <script>
   function fbshare() {
