--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="description" content="Sujin Lee | Creative Developer">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="icon" type="image/png" href="{% static 'image/background/favicon_logo.png' %}">
     {% block title %}
     <title>Sujin Lee - A Creative Developer</title>
@@ -99,7 +100,7 @@
     <script src="//sujinlee.disqus.com/count.js" id="dsq-count-scr" async></script>
     
     <!-- build:js -->
-    <script src="{% static 'src/js/script.js' %}"></script>
+    <script src="{% static 'src/js/menu.js' %}"></script>
     <script src="{% static 'src/js/social.js' %}"></script>
     <!-- endbuild -->
 
