--- a/myblog/static/src/scss/text.scss
+++ b/myblog/static/src/scss/text.scss
@@ -416,6 +416,7 @@ strong {
     display: flex;
     h1 {
         vertical-align: middle;
+
     }
 }
 .page_title h1, .post_title h1 {
@@ -425,20 +426,6 @@ strong {
 }
 .post_title h1 {
     text-align: center;
-}
-$txt_margin: 4%;
-.home_title {
-    h1 {
-        font-size: 2.2rem;
-        margin-bottom: $txt_margin;
-    }
-    h2 {
-        margin-bottom: $txt_margin * 2;
-        font-size: 1.4rem;
-    }
-    h3 {
-        font-size: 1.2rem;
-    }
 }
 .hljs {
     display: block;
@@ -466,4 +453,18 @@ $txt_margin: 4%;
 }
 .hljs-emphasis {
     font-style: italic;
+}
+
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+html {
+    font-size: 13px;
+}
+.page_title h1 {
+          font-size: 1.8rem;
+        }
+
 }
