--- a/myblog/static/src/scss/style.scss
+++ b/myblog/static/src/scss/style.scss
@@ -75,9 +75,15 @@ main {
 }
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
+@media screen 
+and (min-width : 320px) 
+and (max-width : 480px) {
+
+
+html {
+      -webkit-overflow-scrolling: touch;
+
+}
 #snb_left_box {
     width: 0;
 }
@@ -392,19 +398,28 @@ button, .btn_share li {
 }
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
+@media screen 
+and (min-width : 320px) 
+and (max-width : 480px) {
 .ico_menu {
     right: $mobile_page_margin;
     top: $mobile_page_margin;
 }
 .gnb {
-   width: 25vh;
-    padding: 15vh 5vh;
+    width: 100%;
     height: 20vh;
+    opacity: 0.9;
+    padding: 0;
+    ul {
+            width: 100%;
+    
+    margin-top: 5vh;
+    }
     li {
-        display: block;
+        // display: block;
+    }
+    a {
+        font-size: 1.3rem;
     }
 }
 }
@@ -529,10 +544,10 @@ span.show_unlike.icon-heart {
         width: 100%;
     }
     h2 {
-        width: 90%;
+        width: 85%;
     }
     .btn_read {
-        width: 10%;
+        width: 15%;
         float: right;
     }
 }
@@ -571,17 +586,30 @@ span.show_unlike.icon-heart {
     bottom: 0;
     display: flex;
 }
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
-.blog_ele {
-    width: 100%;
-}
+@media screen 
+and (min-width : 320px) 
+and (max-width : 480px) {
 .project_ele {
     width: 100%;
-    max-height: 30vh;
+    padding-bottom: 7vh;
+    max-height: 50vh;
+    
+    header {
+        margin: $mobile_page_margin;
+        min-height: 30% !important;
+    }
+    .detail {
+        position: relative;
+    }
+    }
+    picture {
+        height: 40%;
+    }
+    header {
+        height: 60%;
+    }
 }
-}
+
 
 /* blog */
 #lst_project_wrap {
@@ -700,24 +728,47 @@ article {
 }
 
 
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
+@media screen 
+and (min-width : 320px) 
+and (max-width : 480px) {
 #main_lst {
     margin: 0 !important;
 }
 .blog_ele {
-    padding: 3vh;
-    height: 18vh;
-
-
+    padding: 3vh 0;
+    max-height: 24vh;
+    .btn_read {
+        display: none;
+    }
+    header {
+        width: 65%;
+        h2, h3 {
+            width: 90%;
+        }
+    }
+    picture {
+        width: 35%;
+        height: 24vh;
+    }
+    img {
+        height: 100%;
+        width: 100%;
+    }
 }
 
+.blog_ele {
+    footer {
+        position: relative;
+        padding: $mobile_page_margin / 2 0;
+        // transform: translateY(7.5vh);
+    }
+}
 }
 
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
+@media screen 
+and (min-width : 320px) 
+and (max-width : 480px) {
+
 .btn_back {
     margin-left: -1vh;
 }
@@ -730,10 +781,24 @@ article {
         height: 30vh;
     }
 }
+article {
+    padding-top: 1vh;
+}
 article, .disqus {
      padding-left: 0;
      padding-right: 0;
      margin: 0;
+}
+
+
+#pagination {
+    h2 {
+        font-size: 1.2em;
+    }
+}
+
+.post_title {
+    margin: $mobile_page_margin 0;
 }
  .snb_left {
         display: none;
@@ -742,4 +807,15 @@ article, .disqus {
 .disqus {
     padding: 0;
 }
+.pagination_col {
+    padding: $mobile_page_margin 0;
+}
+.btn_gototop {
+    bottom: $mobile_page_margin - 1vh;
+    right: $mobile_page_margin - 1vh;
+}
+.next_page {
+    padding: 0;
+}
+
 }
