--- a/myblog/static/src/scss/text.scss
+++ b/myblog/static/src/scss/text.scss
@@ -457,14 +457,14 @@ strong {
 
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
+@media screen 
+and (min-width : 320px) 
+and (max-width : 480px) {
 html {
     font-size: 13px;
 }
 .page_title h1 {
-          font-size: 1.8rem;
-        }
+    font-size: 1.8rem;
+}
 
 }
