--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -61,7 +61,7 @@
             <div class="contact">
             <ul>
               <li class="title">EMAIL</li>
-              <li>sujinlee.me@gmail.com</li>
+              <li><a href="mailto:sujinlee.me@gmail.com">sujinlee.me@gmail.com</a></li>
             </ul>
             <ul>
                 <li class="title">Find Me On</li>
@@ -103,9 +103,7 @@
     <script src="{% static 'src/js/menu.js' %}"></script>
     <script src="{% static 'src/js/social.js' %}"></script>
     <!-- endbuild -->
-
-    <!--Code Syntax -->
-    <script>hljs.initHighlightingOnLoad();</script>
+    
     <!--google-analytics-->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
